# question_box_selection

./: .gitignore  README.md  service_name  url.txt
src/: CMakeLists.txt  automatic_box.h  detect_model.cpp
src/ai_model/: init_model.sh  readme
src/alg/cls_model/: config.ini
src/alg/include/: BatchStream.h  cls_image_rotate.hpp  cls_image_rotate_tal.hpp  config.hpp  det_timu_yolov5.hpp  frame_state_detector.hpp  image_to_blob.hpp  rotateInterface.h  tensorrt.hpp  yololayer.h
src/alg/lib/: libdet_timu_yolov5.so.700.100.2.0.0
src/alg/model/: config.ini
src/alg/yolo_model/: config.ini
